--- a/GRSNG_New/GlobalReportingSystem.Web.UI/Views/Launch/Linear.cshtml
+++ b/GRSNG_New/GlobalReportingSystem.Web.UI/Views/Launch/Linear.cshtml
@@ -56,6 +56,7 @@
             </div>
 
             <!-- /section:custom/widget-box.toolbar -->
+            <!-- /section:custom/widget-box.toolbar -->
         </div>
         <div class="widget-body">
             <div class="widget-main">
